tests/fixtures/invalid/pow_list_float_str.py
# Cannot call pow() with List[int], Float, Str
x = pow([1, 2, 3], 1.0, "hello")
